2008-10-02	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug #9376: ['_DOMAINS'] requires preVars definition

2008-09-27	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug #9265: findRootPageIdByHost is used in class.tx_realurl_advanced.php but never defined
	* Fixed bug: appendMissingSlash does not work properly if query string present
	* Fixed bug #9288: Typewriting error in ext_localconf.php

2008-09-23	Dmitry Dulepov	<dmitry@typo3.org>

	* Added "redirect" keyword for "appendMissingSlash" option

2008-08-25	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug #9190: Missing argument 2 for tx_realurl_tcemain::clearBranchCache()
	* reapplyAbsRefPrefix is now on if not set explicitely
	* add page exclusion from path also to "not in menu" and sysfolders
	* Released version 1.5.1

2008-08-15	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug #6513: Small improvements (multi-language, URL length, page type)
	* Fixed bug #7444: Wrong resolving of shortcut pages leading to double content
	* Fixed bug #8683: Improve domain handling in dependency to query parameters (patch by Oliver Hader)
	* Fixed bug #5506: Redirects set in BE doesn't work
	* Released version 1.5.0

2008-08-14	Dmitry Dulepov	<dmitry@typo3.org>

	* Added more methods to determine root page id
	* Fixed bug #7111: noMatch = bypass makes prevents realurl to decode fileName on root page
	* Added search for site root in autoconf
	* Fixed bug #9042: Pagetitle with ® sign not working (sometimes)
	* Fixed bug #9013: tx_realurl_advanced ignores deleted and hidden flag of table pages_language_overlay
	* Added "exclude" flag for pages

2008-05-26	Dmitry Dulepov	<dmitry@typo3.org>

	* New feature: reapply config.absRefPrefix to URL if configured so
	* Added information to the manual about removing empty segments

2008-05-23	Dmitry Dulepov	<dmitry@typo3.org>

	* New feature: remove postVar segment completely if it it produces only empty values

2008-05-14	Dmitry Dulepov	<dmitry@typo3.org>
