@@ -83,6 +83,18 @@ class tx_realurl_tcemain {
 	var	$tceMainInstList = array();
 
 	/**
+	 * If set to true, debug log is enabled
+	 *
+	 * @var	boolean
+	 */
+	var $enableDevLog;
+
+	public function __construct() {
+		$sysconf = unserialize($GLOBALS['TYPO3_CONF_VARS']['EXT']['extConf']['realurl']);
+		$this->enableDevLog = $sysconf['enableDevLog'];
+	}
+
+	/**
 	 * Records old page information for future use.
 	 *
 	 * @param	array		$incomingFieldArray	Fields to be modified
@@ -104,17 +116,23 @@ class tx_realurl_tcemain {
 					return;
 				}
 			}
-			t3lib_div::devLog('Found pids', 'realurl', 0, array('realUid' => $realUid, 'language' => $language));
+			if ($this->enableDevLog) {
+				t3lib_div::devLog('Found pids', 'realurl', 0, array('realUid' => $realUid, 'language' => $language));
+			}
 			// Quit immediately if page in not available in FE
 			if (!($configAr = $this->getConfigForPage($realUid))) {
 				// Page is not configured for realurl
-				t3lib_div::devLog('Configuration is not found for pid=' . $realUid, 'realurl');
+				if ($this->enableDevLog) {
+					t3lib_div::devLog('Configuration is not found for pid=' . $realUid, 'realurl');
+				}
 				return;
 			}
 			list($domain, $config) = $configAr;
 			if ($config['pagePath']['type'] != 'user' || false === strpos($config['pagePath']['userFunc'], 'tx_realurl_advanced')) {
 				// Not tx_realurl_advanced, nothing to do
-				t3lib_div::devLog('Not tx_realurl_advanced', 'realurl');
+				if ($this->enableDevLog) {
+					t3lib_div::devLog('Not tx_realurl_advanced', 'realurl');
+				}
 				return;
 			}
 			$field_list = t3lib_div::trimExplode(',', $this->getFieldList($table, $config), true);
@@ -125,7 +143,9 @@ class tx_realurl_tcemain {
 				}
 			}
 			if (count($fields)) {
-				t3lib_div::devLog('Found modified fields of interest', 'realurl', 0, $fields);
+				if ($this->enableDevLog) {
+					t3lib_div::devLog('Found modified fields of interest', 'realurl', 0, $fields);
+				}
 				list($values) = $GLOBALS['TYPO3_DB']->exec_SELECTgetRows(implode(',', $fields), $table, 'uid=' . $id);
 				$modified = false;
 				foreach ($fields as $field) {
@@ -133,7 +153,9 @@ class tx_realurl_tcemain {
 						break;
 					}
 				}
-				t3lib_div::devLog('$modified=' . intval($modified), 'realurl', 0, $fields);
+				if ($this->enableDevLog) {
+					t3lib_div::devLog('$modified=' . intval($modified), 'realurl', 0, $fields);
+				}
 				if ($modified) {
 					$tceMainId = count($this->tceMainInstList);
 					$this->tceMainInstList[$tceMainId] = $pObj->tx_realurl_tcemain_id = uniqid('');
@@ -161,7 +183,9 @@ class tx_realurl_tcemain {
 		/* @var $pObj t3lib_TCEmain */
 		if (isset($pObj->tx_realurl_tcemain_id)) {
 			$tceMainInst = array_search($pObj->tx_realurl_tcemain_id, $this->tceMainInstList);
-			t3lib_div::devLog('$processDatamap_afterDatabaseOperations', 'realurl', 0, array('status' => $status, 'tceMainInst' => $tceMainInst));
+			if ($this->enableDevLog) {
+				t3lib_div::devLog('$processDatamap_afterDatabaseOperations', 'realurl', 0, array('status' => $status, 'tceMainInst' => $tceMainInst));
+			}
 			if ($status == 'update' && $tceMainInst !== false && isset($this->fieldCollection[$tceMainInst][$table][$id])) {
 				$configName = &$this->fieldCollection[$tceMainInst][$table][$id]['configName'];
 				$config = &$GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['realurl'][$configName];
@@ -186,7 +210,9 @@ class tx_realurl_tcemain {
 				if ($this->createTSFE($this->fieldCollection[$tceMainInst][$table][$id]['realUid'])) {
 					// Here only if we can create speaking URL for the page (page is not sysfolder, etc)
 					$parent = $GLOBALS['TSFE'];
-					t3lib_div::devLog('Calling FE', 'realurl');
+					if ($this->enableDevLog) {
+						t3lib_div::devLog('Calling FE', 'realurl');
+					}
 					t3lib_div::callUserFunction($userFunc, $params, $parent);	// Note: encodeSpUrl does not use parent object at all!
 					$config['pagePath']['autoUpdatePathCache'] = $savedAutoUpdatePathCache;
 				}
@@ -259,7 +285,9 @@ class tx_realurl_tcemain {
 	function getConfigForPage($pid) {
 		$rootline = t3lib_BEfunc::BEgetRootLine($pid);
 		if (($domain = t3lib_BEfunc::firstDomainRecord($rootline))) {
-			t3lib_div::devLog('Found domain record', 'realurl', 0, $domain);
+			if ($this->enableDevLog) {
+				t3lib_div::devLog('Found domain record', 'realurl', 0, $domain);
+			}
 			if (isset($GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['realurl'][$domain])) {
 				$config = $GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['realurl'][$domain];
 				while (is_string($config)) {
@@ -269,7 +297,9 @@ class tx_realurl_tcemain {
 				return array($domain, $config);
 			}
 		}
-		t3lib_div::devLog('Checking default', 'realurl', 0, intval(isset($GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['realurl']['_DEFAULT'])));
+		if ($this->enableDevLog) {
+			t3lib_div::devLog('Checking default', 'realurl', 0, intval(isset($GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['realurl']['_DEFAULT'])));
+		}
 		return (isset($GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['realurl']['_DEFAULT']) ? array('_DEFAULT', $GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['realurl']['_DEFAULT']) : false);
 	}
 
