@@ -1,6 +1,7 @@
 2008-10-02	Dmitry Dulepov	<dmitry@typo3.org>
 
 	* Fixed bug #9376: ['_DOMAINS'] requires preVars definition
+	* Fixed bug #9405: devLog() calls without debug test in class.tx_realurl_tcemain.php
 
 2008-09-27	Dmitry Dulepov	<dmitry@typo3.org>
 
